<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imvClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_km_por_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/km_kwh"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvClose" />

    <EditText
        android:id="@+id/et_valor_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/custo_do_kwh"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_km_por_kwh" />

    <EditText
        android:id="@+id/et_distancia_viagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/quilometragem_da_viagem"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/et_valor_kwh"
        app:layout_constraintStart_toStartOf="@id/et_valor_kwh"
        app:layout_constraintTop_toBottomOf="@id/et_valor_kwh" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/cor_botoes"
        android:text="@string/calcular"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_distancia_viagem"
        app:layout_constraintStart_toStartOf="@+id/et_distancia_viagem"
        app:layout_constraintTop_toBottomOf="@+id/et_distancia_viagem"/>

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="@id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular" />
</androidx.constraintlayout.widget.ConstraintLayout>